--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <p>Oprócz tego pliku w folderze PIW znajdują się dodatkowe 4 pliki HTML. Poniżej wyjaśniam:</p>
     <ul>
       <li><a href="1.html">"kotki - finalny html"</a> - ostatni kod strony internetowej o kotach rozwijanej podczas kursu Basic HTML and HTML5</li>
-      <li>"kotki - finalny css" - ostatni kod strony internetowej o kotach rozwijanej podczas kursu Basic CSS</li>
-      <li>"calkiem finalny html" - kod z ostatniego zadania kursu Basic HTML and HTML5</li>
-	  <li>"calkiem finalny css" - kod z ostatniego zadania kursu Basic CSS</li>
+      <li><a href="2.html">"kotki - finalny css"</a> - ostatni kod strony internetowej o kotach rozwijanej podczas kursu Basic CSS</li>
+      <li><a href="3.html">"calkiem finalny html"</a> - kod z ostatniego zadania kursu Basic HTML and HTML5</li>
+	  <li><a href="4.html">"calkiem finalny css"</a> - kod z ostatniego zadania kursu Basic CSS</li>
     </ul>
   </div>
 </body>
