--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <a href="https://github.com/Zagrajki/Zagrajki.github.io" target="_blank"><img src="https://www.zani.co.uk/images/April2012/steven%20seagal%20david%20weeks%20zani%201.jpg" alt="Miał tu być obrazek, ale widocznie uciekł."></a>
 
   <div>
-    <p>Oprócz tego pliku w folderze PIW znajdują się dodatkowe 4 pliki HTML. Poniżej wyjaśniam:</p>
+    <p>Oprócz tego pliku w repozytorium znajdują się dodatkowe 4 pliki HTML. Poniżej można do nich przejść:</p>
     <ul>
       <li><a href="1.html">"kotki - finalny html"</a> - ostatni kod strony internetowej o kotach rozwijanej podczas kursu Basic HTML and HTML5</li>
       <li><a href="2.html">"kotki - finalny css"</a> - ostatni kod strony internetowej o kotach rozwijanej podczas kursu Basic CSS</li>
