--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       <li><a href="2.html">"kotki - finalny css"</a> - ostatni kod strony internetowej o kotach rozwijanej podczas kursu Basic CSS</li>
       <li><a href="3.html">"calkiem finalny html"</a> - kod z ostatniego zadania kursu Basic HTML and HTML5</li>
 	  <li><a href="4.html">"calkiem finalny css"</a> - kod z ostatniego zadania kursu Basic CSS</li>
+	  <li><a href="https://www.koty.pl/">"zewnetrzna strona o kotkach"</a></li>
     </ul>
   </div>
 </body>
