--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 </head>
 <body>
 <h2>Dzień dobry, Szanowny Panie Doktorze!</h2>
+  <p>Linki do stron internetowych realizujacych najnowsze zadania z laboratorium sa u dolu tej strony.</p>
   <p color="green">Poniższy obrazek po kliknięciu przenosi na moje konto GitHub:</p>
 
   <a href="https://github.com/Zagrajki/Zagrajki.github.io" target="_blank"><img src="https://www.zani.co.uk/images/April2012/steven%20seagal%20david%20weeks%20zani%201.jpg" alt="Miał tu być obrazek, ale widocznie uciekł."></a>
@@ -16,6 +17,7 @@
       <li><a href="3.html">"calkiem finalny html"</a> - kod z ostatniego zadania kursu Basic HTML and HTML5</li>
 	  <li><a href="4.html">"calkiem finalny css"</a> - kod z ostatniego zadania kursu Basic CSS</li>
 	  <li><a href="https://www.koty.pl/">"zewnetrzna strona o kotkach"</a></li>
+	  <li><a href="lab3.html">"Lab3"</a></li>
     </ul>
   </div>
 </body>
