--- a/lab3.html
+++ b/lab3.html
@@ -1,9 +1,14 @@
 <head>
 	<title>Lista ToDo</title>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 	<script src="lab3js.js"></script>
 </head>
 <body>
-	<div id="ToDo-list">
+	<label for="polecenie">Polecenie:</label>
+	<input id="polecenie">
+	<br>
+	
+	<div id="ToDoList">
 	<h2>Lista ToDo:</h2>
 	</div>
 </body>
