--- a/lab3.html
+++ b/lab3.html
@@ -11,4 +11,14 @@
 	<div id="ToDoList">
 	<h2>Lista ToDo:</h2>
 	</div>
+	
+	<script>
+var input = document.getElementById("ToDoList");
+input.addEventListener("keyup", function(event) {
+  if (event.keyCode === 13) {
+   event.preventDefault();
+   fun1();
+  }
+});
+</script>
 </body>
