--- a/lab3.html
+++ b/lab3.html
@@ -8,6 +8,7 @@
 	<input id="polecenie">
 	<br>
 	<button id="OK" onclick="fun1()">OK</button>
+	<button id="OK2" onclick="fillData()">OK2</button>
 	
 	<div id="ToDoList">
 	<h2>Lista ToDo:</h2>
