--- a/lab3.html
+++ b/lab3.html
@@ -7,8 +7,7 @@
 	<label for="polecenie">Polecenie:</label>
 	<input id="polecenie">
 	<br>
-	<button id="OK" onclick="fun1()">OK</button>
-	<button id="OK2" onclick="fillData()">OK2</button>
+	<button id="OK" onclick="fillData()">OK</button>
 	
 	<div id="ToDoList">
 	<h2>Lista ToDo:</h2>
