--- a/lab3.html
+++ b/lab3.html
@@ -1,15 +1,51 @@
+<!DOCTYPE html>
+<html>
 <head>
 	<title>Lista ToDo</title>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
 	<script src="lab3js.js"></script>
 </head>
-<body>
-	<label for="polecenie">Polecenie:</label>
+<body style="background-color: pink">
+	<label for="polecenie" style="font-family:Courier New">Polecenie:</label>
 	<input id="polecenie">
-	<br>
-	<button id="OK" onclick="fillData()">OK</button>
-	
+	<button id="OK" class="btn btn-success" onclick="fillData()">OK</button>
+    <button id="KOSZ" style="float: right" class="btn btn-warning" onclick="koszyk()">KOSZ</button>
+    <br>
+    <br>
 	<div id="ToDoList">
-	<h2>Lista ToDo:</h2>
+	<h2 style="font-family:italic">Lista ToDo:</h2>
+	</div>
+	<div class="modal-overlay">
+  	<div class="modal-content">
+   		<h2>Na pewno chcesz to skasowac?</h2>
+    	<button id="nie" class="btn btn-danger">nie</button>
+    	<button id="tak" class="btn btn-success">tak</button>
+    </div>
 	</div>
 </body>
+<style>
+.modal-overlay {
+  visibility: hidden;
+  position: absolute;
+  background: #ffffff;
+  border: 3px solid #666666;
+  width: 50%;
+  height: 150px;
+  left: 25%;
+  top: 10px;
+}
+
+.modal-overlay.shown {
+  visibility: visible;
+  text-align: center;
+}
+
+.modal-content {
+  visibility: hidden;
+}
+
+.modal-content.shown {
+  visibility: visible;
+}
+</style>
