--- a/lab3.html
+++ b/lab3.html
@@ -16,8 +16,8 @@
 	<div id="ToDoList">
 	<h2 style="font-family:italic">Lista ToDo:</h2>
 	</div>
-	<div class="modal-overlay">
-  	<div class="modal-content">
+	<div class="popup-overlay">
+  	<div class="popup-content">
    		<h2>Na pewno chcesz to skasowac?</h2>
     	<button id="nie" class="btn btn-danger">nie</button>
     	<button id="tak" class="btn btn-success">tak</button>
@@ -25,7 +25,7 @@
 	</div>
 </body>
 <style>
-.modal-overlay {
+.popup-overlay {
   visibility: hidden;
   position: absolute;
   background: #ffffff;
@@ -36,16 +36,16 @@
   top: 10px;
 }
 
-.modal-overlay.shown {
+.popup-overlay.active {
   visibility: visible;
   text-align: center;
 }
 
-.modal-content {
+.popup-content {
   visibility: hidden;
 }
 
-.modal-content.shown {
+.popup-content.active {
   visibility: visible;
 }
 </style>
