--- a/lab3.html
+++ b/lab3.html
@@ -19,8 +19,8 @@
 	<div class="popup-overlay">
   	<div class="popup-content">
    		<h2>Na pewno chcesz to skasowac?</h2>
-    	<button id="nie" class="btn btn-danger">nie</button>
-    	<button id="tak" class="btn btn-success">tak</button>
+    	<button id="nie" class="nienie btn btn-danger">nie</button>
+    	<button id="tak" class="taktak btn btn-success">tak</button>
     </div>
 	</div>
 </body>
