--- a/lab3.html
+++ b/lab3.html
@@ -28,6 +28,15 @@
 .popup-content.active {
   visibility: visible;
 }
+
+.taktak {
+	visibility: visible;
+}
+
+.nienie {
+	visibility: visible;
+}
+
 </style>
 	<script src="lab3js.js"></script>
 </head>
