--- a/lab3.html
+++ b/lab3.html
@@ -4,6 +4,31 @@
 	<title>Lista ToDo</title>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+	<style>
+	.modal-overlay {
+		visibility: hidden;
+		position: absolute;
+		background: #ffffff;
+		border: 3px solid #666666;
+		width: 50%;
+		height: 150px;
+		left: 25%;
+		top: 10px;
+		}
+
+	.modal-overlay.active {
+		visibility: visible;
+		text-align: center;
+	}
+
+	.modal-content {
+		visibility: hidden;
+	}
+
+	.modal-content.active {
+		visibility: visible;
+	}
+</style>
 	<script src="lab3js.js"></script>
 </head>
 <body style="background-color: pink">
@@ -16,36 +41,11 @@
 	<div id="ToDoList">
 	<h2 style="font-family:italic">Lista ToDo:</h2>
 	</div>
-	<div class="popup-overlay">
-  	<div class="popup-content">
+	<div class="modal-overlay">
+  	<div class="modal-content">
    		<h2>Na pewno chcesz to skasowac?</h2>
     	<button id="nie" class="btn btn-danger" onclick="nie()">nie</button>
     	<button id="tak" class="btn btn-success" onclick="tak()">tak</button>
     </div>
 	</div>
 </body>
-<style>
-.popup-overlay {
-  visibility: hidden;
-  position: absolute;
-  background: #ffffff;
-  border: 3px solid #666666;
-  width: 50%;
-  height: 150px;
-  left: 25%;
-  top: 10px;
-}
-
-.popup-overlay.active {
-  visibility: visible;
-  text-align: center;
-}
-
-.popup-content {
-  visibility: hidden;
-}
-
-.popup-content.active {
-  visibility: visible;
-}
-</style>
