--- a/lab3.html
+++ b/lab3.html
@@ -43,7 +43,7 @@
 	</div>
 	<div class="modal-overlay">
   	<div class="modal-content">
-   		<h2>Na pewno chcesz to skasowac?</h2>
+   		<h2>Na pewno chcesz to skasować?</h2>
     	<button id="nie" class="btn btn-danger" onclick="nie()">nie</button>
     	<button id="tak" class="btn btn-success" onclick="tak()">tak</button>
     </div>
