--- a/lab4.html
+++ b/lab4.html
@@ -13,7 +13,7 @@
 
     <div id="root"></div>
 
-    <script type="text/babel" src="skrypt.js"></script>
+    <script type="text/babel" src="lab4js.js"></script>
     <!--
       Note: this page is a great way to try React but it's not suitable for production.
       It slowly compiles JSX with Babel in the browser and uses a large development build of React.
