--- a/lab4.html
+++ b/lab4.html
@@ -11,7 +11,10 @@
   </head>
   <body>
 
-    <div id="root"></div>
+    <div id="root1" style = "position:fixed; left:0px;"></div>
+    <div id="root2" style = "position:fixed; left:200px;"></div>
+    <div id="root3" style = "position:fixed; left:500px;"></div>
+    <div id="root4" style = "position:fixed; top:300px;"></div>
 
     <script type="text/babel" src="lab4js.js"></script>
     <!--
