--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 	  <li><a href="https://www.koty.pl/">"zewnetrzna strona o kotkach"</a></li>
 	  <li><a href="lab3.html">"Lab3"</a></li>
 	  <li><a href="lab4.html">"Lab4"</a></li>
+	  <li><a href="lab4new.html">"Lab4" - nowsza wersja, po terminie, ale poprawiona</a></li>
     </ul>
   </div>
 </body>
