--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	  <li><a href="lab3.html">"Lab3"</a></li>
 	  <li><a href="lab4.html">"Lab4"</a></li>
 	  <li><a href="lab4new.html">"Lab4" - nowsza wersja, po terminie, ale poprawiona</a></li>
-	  <li><a href="./labV/src/index.html">"Lab5"</a></li>
+	  <li><a href="https://zagrajki.github.io/my-app/">"Lab5"</a></li>
     </ul>
   </div>
 </body>
