--- a/lab4new.html
+++ b/lab4new.html
@@ -11,7 +11,7 @@
   </head>
   <body>
 
-    <div id="root1" style = "position:fixed; left:0px;"></div>
+    <div id="root" style = "position:fixed; left:0px;"></div>
     <div id="root2" style = "position:fixed; left:200px;"></div>
     <div id="root3" style = "position:fixed; left:500px;"></div>
     <div id="root4" style = "position:fixed; top:300px;"></div>
