krew mnie zalewa

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	  <li><a href="lab4.html">"Lab4"</a></li>
 	  <li><a href="lab4new.html">"Lab4" - nowsza wersja, po terminie, ale poprawiona</a></li>
 	  <li><a href="https://zagrajki.github.io/my-app/">"Lab5"</a></li>
-	  <li><a href="https://zagrajki.github.io/m-app2/">"Lab ostatnie"</a></li>
+	  <li><a href="https://zagrajki.github.io/my-app-e/">"Lab ostatnie"</a></li>
     </ul>
   </div>
 </body>
